feat(auth,invitations): stop auto-provisioning on auth; add patient registration and staff invite flow